--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-router": "^10.0.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "firebase-admin": "13.4.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
